--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
     width: 120px;
     font-family: 'Work Sans';
     background-color: #eb6536;
-    padding-top: 18px 0;
+    padding: 18px 0;
     font-size: 18px;
     text-align: center;
     color: #010165;
