feature: winning streak

--- a/style.css
+++ b/style.css
@@ -60,3 +60,9 @@ body {
     color: #010165;
     cursor: pointer;
   }
+
+  .winning-streak {
+      text-align: center;
+      color: white;
+      font-family: 'Work Sans';
+  }
